# frame-emulator

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: plain_text_current_sdk_shape.py
src/frame_emulator/: __init__.py  cli.py  compat.py  core.py  display.py  overlay.py  sdk.py  sources.py
tests/: test_emulator.py
tools/: FrameLensOverlay.swift
