[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frame-emulator"
version = "0.1.0"
description = "Headless and desktop emulator for Brilliant Labs Frame app development."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
image = ["pillow>=11.1.0"]

[project.scripts]
frame-emulator = "frame_emulator.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
